<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/nav_panel" android:layout_width="fill_parent"
	android:background="@drawable/nav_bar_bg" android:layout_height="wrap_content"
	android:gravity="center_vertical">
	<!-- 分享 -->
	<LinearLayout android:layout_width="wrap_content"
		android:layout_weight="1" android:background="@drawable/selection_menu_background"
		android:id="@+id/nav_share" android:gravity="center"
		android:clickable="true" android:layout_height="fill_parent"
		android:paddingRight="6dip">
		<ImageView android:id="@+id/nav_share_icon"
			android:background="@drawable/nav_share_background"
			android:layout_marginRight="4dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView android:id="@+id/nav_share_text" android:text="@string/menu_share"
			android:gravity="center" style="@style/nav_text_style"
			android:layout_width="wrap_content" android:layout_height="fill_parent">
		</TextView>
	</LinearLayout>
	<!-- 评价 -->
	<!-- <ImageView android:src="@drawable/selection_menu_divider" android:layout_gravity="left" 
		android:scaleType="fitXY" android:layout_width="wrap_content" android:layout_height="fill_parent" 
		/> -->
	<LinearLayout android:layout_width="wrap_content"
		android:layout_weight="1" android:background="@drawable/selection_menu_background"
		android:id="@+id/nav_comment" android:clickable="true"
		android:gravity="center" android:layout_height="fill_parent"
		android:paddingLeft="4dip" android:paddingRight="6dip">
		<ImageView android:id="@+id/nav_comment_icon"
			android:layout_marginRight="4dip"
			android:background="@drawable/nav_comment_background"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:id="@+id/nav_comment_text" android:gravity="center"
			android:text="@string/menu_comment" android:layout_width="wrap_content"
			style="@style/nav_text_style" android:layout_height="fill_parent" />
	</LinearLayout>
	<!-- 更多 -->
	<!-- <ImageView android:src="@drawable/selection_menu_divider" android:layout_gravity="left" 
		android:scaleType="fitXY" android:layout_width="wrap_content" android:layout_height="fill_parent" 
		/> -->
	<LinearLayout android:layout_width="wrap_content"
		android:gravity="center" android:layout_weight="1"
		android:background="@drawable/selection_menu_background" android:id="@+id/nav_more"
		android:clickable="true" android:layout_height="fill_parent">
		<ImageView android:id="@+id/nav_more_icon"
			android:background="@drawable/nav_detail_more_background"
			android:layout_marginRight="4dip"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:id="@+id/nav_more_text" style="@style/nav_text_style"
			android:gravity="center" android:text="@string/menu_more"
			android:layout_width="wrap_content" android:layout_height="fill_parent" />
	</LinearLayout>
</LinearLayout>